fixed slect box submit issue

--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -60,7 +60,7 @@
         'name': 'status',
         'value': record.status,
         'options': record.statusoptions,
-        'attributes': 'form="editcontent"',
+        'form': 'editcontent'
     } %}
 
     {#<input type="text" name="author" value="{{ record.author }}">#}
