added Base Of Image Vue Component

--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -1,5 +1,7 @@
 //** Styling
 @import './vendor/vendor';
+@import './modules/modules';
+
 @import "settings";
 @import "textstyles";
 @import "layout";
