--- a/templates/editcontent/fields/file.twig
+++ b/templates/editcontent/fields/file.twig
@@ -52,14 +52,6 @@
 
     </div>
 
-    {# <style>
-        #{{ id }}-uploader {
-            background-image: url({{ field.get('filename')|thumbnail(width=400, height=300, area='files') }});
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        .filepond--root {
-            margin: 0;
-        }
-    </style> #}
+    <mark>Note: This field is practically the same as the <code>image</code>-field.</mark>
+
 {% endblock %}
