--- a/templates/finder/_uploader.twig
+++ b/templates/finder/_uploader.twig
@@ -1,40 +1,17 @@
-<link rel="stylesheet" href="https://unpkg.com/filepond/dist/filepond.min.css">
-<link rel="stylesheet" href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css">
-
-<script src="https://unpkg.com/filepond-plugin-image-preview"></script>
-<script src="https://unpkg.com/filepond-plugin-file-metadata/dist/filepond-plugin-file-metadata.js"></script>
-<script src="https://unpkg.com/filepond"></script>
-<script src="https://unpkg.com/vue"></script>
-<script src="https://unpkg.com/vue-filepond"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/dropzone.js" integrity="sha256-awEOL+kdrMJU/HUksRrTVHc6GA25FvDEIJ4KaEsFfG4=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/basic.css" integrity="sha256-NI6EfwSJhhs7gXBPbwLXD00msI29Bku3GDJT8gYW+gc=" crossorigin="anonymous" />
 
 <div class="card mb-4">
     <div class="card-header">File uploader</div>
-    <div id="uploader">
-        <file-pond name="filepond[]"
-           ref="pond"
-           allow-multiple="true"
-           accepted-file-types="image/jpeg, image/png"
-           server="/async/upload"></file-pond>
-    </div>
+
+    <script type="text/javascript" src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+
+    <form action="{{ path('bolt_upload_post', {'area': area, 'path': path}) }}" method="POST" class="dropzone" style="width:200px; height:200px; border:1px dashed crimson">
+        <div class="fallback">
+            <input name="file" type="file" multiple />
+        </div>
+    </form>
+
 </div>
 
 
-<script>
-    FilePond.registerPlugin(
-        FilePondPluginFileMetadata,
-        FilePondPluginImagePreview
-    );
-    FilePond.setOptions({
-        fileMetadataObject: {
-            'area': '{{ area }}',
-            'path': '{{ path }}'
-        }
-    });
-
-    new Vue({
-        el: '#uploader',
-        components: {
-            FilePond: vueFilePond.default()
-        }
-    });
-</script>
