--- a/templates/editcontent/fields/checkbox.twig
+++ b/templates/editcontent/fields/checkbox.twig
@@ -1,7 +1,12 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
+    {{ value }}
     <label>{{ label }}</label>
     <input name="{{ name }}" placeholder="First Name" type="checkbox" value="{{ value }}">
+    {# <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="{{ name }}" name="{{ name }}" value="{{ value }}">
+        <label class="custom-control-label" for="{{ name }}">{{ label }}</label>
+    </div> #}
 {% endblock %}
 
