--- a/templates/editcontent/fields/image.twig
+++ b/templates/editcontent/fields/image.twig
@@ -1,65 +1,12 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <label>{{ label }}</label>
-
-    <div class="row" style="margin-right: 0;">
-        <div class="col-8">
-
-            <div class="row mb-2">
-                <div class="col-3">
-                    <label>Filename</label>
-                </div>
-                <div class="col-9">
-                    <input name="{{ name }}[filename]" id="{{ id }}-filename" placeholder="filename.jpg" type="text" value="{{ field.get('filename') }}" class="{{ class }}" {{ attributes|default()|raw }}>
-                </div>
-
-            </div>
-
-            <div class="row mb-2">
-                <div class="col-3">
-                    <label>Alt</label>
-                </div>
-                <div class="col-9">
-                    <input name="{{ name }}[alt]" placeholder="An image depicting a kitten" type="text" value="{{ field.get('alt') }}" class="{{ class }}" {{ attributes|default()|raw }}>
-                </div>
-            </div>
-
-            <div class="row mb-2">
-                <div class="col-3">
-                    <label>Title</label>
-                </div>
-                <div class="col-9">
-                    <input name="{{ name }}[alt]" placeholder="A description of this image" type="text" value="{{ field.get('title') }}" class="{{ class }}" {{ attributes|default()|raw }}>
-                </div>
-            </div>
-
-            <div class="row mb-2">
-                <div class="col-12" style="text-align: right;">
-                    {% if field.get('filename') %}
-                    <a href="{{ field.get('filename')|thumbnail(width=1000, height=1000, area='files') }}" class="btn btn-secondary btn-small lightbox" style="color: #FFF;">
-                        view image
-                    </a>
-                    {%  endif %}
-                    <a href="" onclick="document.querySelector('.filepond--drop-label label').click(); return false;" class="btn btn-secondary btn-small" style="color: #FFF;">Upload an image</a>
-                </div>
-            </div>
-
-        </div>
-        <div class="col-4" id="{{ id }}-uploader" style="padding: 0; min-height: 180px;">
-            {# <file-pond name="filepond[]" ref="pond" accepted-file-types="image/jpeg, image/png" server="/async/upload"></file-pond> #}
-        </div>
-
-    </div>
-
-    {# <style>
-        #{{ id }}-uploader {
-            background-image: url({{ field.get('filename')|thumbnail(width=400, height=300, area='files') }});
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        .filepond--root {
-            margin: 0;
-        }
-    </style> #}
+    <editor-image 
+        :label="'{{ label }}'"
+        :name="'{{ name }}'"
+        :value="'{{ field.get('filename') }}'"
+        :thumbnail="'{{ field.get('filename')|thumbnail(width=1000, height=1000, area='files') }}'"
+        :title="'{{ field.get('title') }}'"
+        :alt="'{{ field.get('alt') }}'"
+    ></editor-image>
 {% endblock %}
