added WP manifest and async/await fucntionality

--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -45,6 +45,8 @@
 
 </div>
 {% block javascripts %}
+    <script src="{{ asset('assets/manifest.js') }}"></script>
+    <script src="{{ asset('assets/vendor.js') }}"></script>
     <script src="{{ asset('assets/bolt.js') }}"></script>
 {% endblock %}
 </body>
