--- a/templates/editcontent/fields/image.twig
+++ b/templates/editcontent/fields/image.twig
@@ -1,12 +1,15 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
+    {% set setPath = field.definition.upload %}
+    {% set directory = path('bolt_upload_post', {'area': area|default('files'), 'path': setPath|default('')}) %}
     <editor-image 
         :label="'{{ label }}'"
         :name="'{{ name }}'"
         :value="'{{ field.get('filename') }}'"
-        :thumbnail="'{{ field.get('filename')|thumbnail(width=1000, height=1000, area='files') }}'"
+        :thumbnail="'{{ field.get('filename')|thumbnail(width=800, height=600, area='files', path=setPath) }}'"
         :title="'{{ field.get('title') }}'"
         :alt="'{{ field.get('alt') }}'"
+        :directory="'{{directory}}'"
     ></editor-image>
 {% endblock %}
