--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -6,10 +6,12 @@
 {% endfor %}
 
 {% block title %}
-    {{ icon(record) }} Edit {{ record.definition.singular_name }} » <strong>{{ record.title|default('New') }}</strong>
+    Edit » <strong>{{ record.title|default('New') }}</strong>
 {% endblock %}
 
 {% block main %}
+
+    {#{{ dump(record.definition.fields) }}#}
 
 <form method="post" id="editcontent" >
 
@@ -35,65 +37,65 @@
 {% endblock %}
 
 {% block aside %}
+
 <div id="metadata" class="card">
     <div class="card-header">
         Meta information
     </div>
     <div class="card-body">
+
         <form class="ui form">
 
-            <button type="submit" class="btn btn-primary mb-3" form="editcontent">
-                <i class="fas fa-save mr-2"></i>Save
-            </button>
+            <input type="submit" class="btn btn-primary" value="Save" form="editcontent">
 
-            {% include '@bolt/editcontent/fields/select.twig' with {
-                'label': 'field.status'|trans,
-                'name': 'status',
-                'value': record.status,
-                'options': record.statusoptions,
-                'form': 'editcontent'
-            } %}
+    {% include '@bolt/editcontent/fields/select.twig' with {
+        'label': 'field.status'|trans,
+        'name': 'status',
+        'value': record.status,
+        'options': record.statusoptions,
+        'form': 'editcontent'
+    } %}
 
-            {#<input type="text" name="author" value="{{ record.author }}">#}
+    {#<input type="text" name="author" value="{{ record.author }}">#}
 
-            {% include '@bolt/editcontent/fields/datetime.twig' with {
-                'label': 'field.createdAt'|trans,
-                'name': 'createdAt',
-                'value': record.createdAt,
-                'readonly': true,
-                'form': 'editcontent'
-            } %}
+    {% include '@bolt/editcontent/fields/datetime.twig' with {
+        'label': 'field.createdAt'|trans,
+        'name': 'createdAt',
+        'value': record.createdAt,
+        'readonly': true,
+        'form': 'editcontent'
+    } %}
 
-            {% include '@bolt/editcontent/fields/datetime.twig' with {
-                'label': 'field.modifiedAt'|trans,
-                'name': 'modifiedAt',
-                'value': record.modifiedAt,
-                'readonly': true,
-                'form': 'editcontent'
-            } %}
+    {% include '@bolt/editcontent/fields/datetime.twig' with {
+        'label': 'field.modifiedAt'|trans,
+        'name': 'modifiedAt',
+        'value': record.modifiedAt,
+        'readonly': true,
+        'form': 'editcontent'
+    } %}
 
-            {% include '@bolt/editcontent/fields/datetime.twig' with {
-                'label': 'field.publishedAt'|trans,
-                'name': 'publishedAt',
-                'value': record.publishedAt,
-                'readonly': false,
-                'form': 'editcontent'
-            } %}
+    {% include '@bolt/editcontent/fields/datetime.twig' with {
+        'label': 'field.publishedAt'|trans,
+        'name': 'publishedAt',
+        'value': record.publishedAt,
+        'readonly': false,
+        'form': 'editcontent'
+    } %}
 
-            {% include '@bolt/editcontent/fields/datetime.twig' with {
-                'label': 'field.depublishedAt'|trans,
-                'name': 'depublishedAt',
-                'readonly': false,
-                'form': 'editcontent'
-            } %}
+    {% include '@bolt/editcontent/fields/datetime.twig' with {
+        'label': 'field.depublishedAt'|trans,
+        'name': 'depublishedAt',
+        'readonly': false,
+        'form': 'editcontent'
+    } %}
 
 
-            {% include '@bolt/editcontent/fields/text.twig' with {
-                'label': 'field.id'|trans,
-                'name': 'id',
-                'value': record.id,
-                'attributes': 'readonly form="editcontent"',
-            } %}
+    {% include '@bolt/editcontent/fields/text.twig' with {
+        'label': 'field.id'|trans,
+        'name': 'id',
+        'value': record.id,
+        'attributes': 'readonly form="editcontent"',
+    } %}
     
         </form>
 
