--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -10,23 +10,49 @@
 {% endblock %}
 
 {% block main %}
-
 <form method="post" id="editcontent" >
 
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('editrecord') }}">
 
 <!-- fields -->
-{% for key, fielddefinition in record.definition.fields %}
+{% set groups = record.definition.groups %}
+<nav>
+  <ul class="nav editor__tabbar" role="tablist">
+      {% for group in groups %}
+          <li class="nav-item">
+              <a 
+                class="nav-item nav-link {% if loop.first %}active{% endif %}" 
+                id="{{group|slug}}-tab-link" 
+                data-toggle="pill" 
+                href="#{{group|slug}}-tab" 
+                role="tab" 
+                aria-controls="{{group|slug}}" 
+                aria-selected="false"
+              >
+              <span>{{group|capitalize}}</span></a>
+          </li>
+      {% endfor %}
+  </ul>
+</nav>
+<div class="tab-content" id="nav-tabContent">
+  {% for group in groups %}
+    <div class="tab-pane {% if loop.first %}show active{% endif %}" id="{{group|slug}}-tab" role="tabpanel" aria-labelledby="{{group|slug}}-tab-link">
+      {% for key, fielddefinition in record.definition.fields %}
+          {% set type = fielddefinition.type %}
+          {% set field = record.field(key) %}
+          {% set fieldgroup = fielddefinition.group %}
+          {% if not field %}
+              {% set field = fieldfactory(fielddefinition, key) %}
+          {% endif %}
+          {% if fieldgroup == group %}
+            {% include ['editcontent/fields/' ~ type ~ '.twig', 'editcontent/fields/generic.twig' ] with { 'field': field} %}
+          {% endif %}
+      {% endfor %}
+    </div>
+  {% endfor %}
+</div>
 
-    {% set type = fielddefinition.type %}
-    {% set field = record.field(key) %}
-    {% if not field %}
-        {% set field = fieldfactory(fielddefinition, key) %}
-    {% endif %}
 
-    {% include ['editcontent/fields/' ~ type ~ '.twig', 'editcontent/fields/generic.twig' ] with { 'field': field} %}
-
-{% endfor %}
 
     <input type="submit" class="btn btn-primary" value="Save">
 
@@ -42,7 +68,7 @@
     <div class="card-body">
         <form class="ui form">
 
-            <button type="submit" class="btn btn-primary mb-3" form="editcontent">
+            <button type="submit" class="btn btn-success mb-3" form="editcontent">
                 <i class="fas fa-save mr-2"></i>Save
             </button>
 
