--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -25,14 +25,12 @@
     <!-- End Admin Header -->
 
     <!-- Admin Sidebar -->
-    <div class="admin__sidebar">
-        <div id="sidebar">
-            <admin-sidebar 
-                :brand="'{{ asset('assets/brand.svg') }}'"
-                :menu="{{ sidebarmenu() }}" 
-                :version="'{{ version|default('unknown') }}'"
-            ></admin-sidebar >
-        </div>
+    <div id="sidebar" class="admin__sidebar">
+        <admin-sidebar 
+            :brand="'{{ asset('assets/brand.svg') }}'"
+            :menu="{{ sidebarmenu() }}" 
+            :version="'{{ version|default('unknown') }}'"
+        ></admin-sidebar >
     </div>
     <!-- End Admin Sidebar -->
 
@@ -46,7 +44,6 @@
           </main>
           <aside class="admin__body--aside">
             {% block aside %}
-            
             {% endblock %}
           </aside>
         </div>
@@ -56,15 +53,6 @@
 </div>
 
 {% block javascripts %}
-    <script>
-        var admin = document.querySelector('.admin');
-        var size = localStorage.getItem('admin-sidebar-size');
-
-        if (size !== null && size === 'slim'){
-            admin.classList.add('is-slim');
-        }
-
-    </script>
     <script src="{{ asset('assets/manifest.js') }}"></script>
     <script src="{{ asset('assets/vendor.js') }}"></script>
     <script src="{{ asset('assets/bolt.js') }}"></script>
