--- a/assets/scss/modules/admin/_header.scss
+++ b/assets/scss/modules/admin/_header.scss
@@ -3,7 +3,6 @@
 .admin__header{
   &--title{
     font-weight: $font-weight-light;
-    font-size: $h3-font-size;
   }
   &--topbar{
     display: flex;
@@ -30,7 +29,7 @@
         width: 40px;
         height: 40px;
         background: $white;
-        box-shadow: $custom-range-thumb-box-shadow;
+        box-shadow: $card-box-shadow;
         border-radius: 100%;
         &:hover{
           text-decoration: none;
