--- a/assets/scss/modules/modules.scss
+++ b/assets/scss/modules/modules.scss
@@ -1,5 +1,7 @@
 //** Modules
 
+@import './base/base';
 @import './admin/admin';
+@import './listing/listing';
 @import './editor/editor';
 @import './fields/fields';
