--- a/templates/_partials/_content_listing.twig
+++ b/templates/_partials/_content_listing.twig
@@ -1,6 +1,6 @@
 
 {% if records %}
-    <table class="table table-striped">
+    {# <table class="table table-striped">
         <thead>
             <tr>
                 <th>Title / Excerpt</th>
@@ -10,17 +10,40 @@
             </tr>
         </thead>
         <tbody>
+        
+  
+        
 
         {% for record in records %}
-
             {% include '@bolt/_partials/_content_record_default.twig' with { 'record': record } %}
 
         {% endfor %}
 
         </tbody>
-    </table>
-
-    {% include '@bolt/_partials/_pager.twig' with { 'records': records } %}
+    </table> #}
+    <nav class="listing__filter">
+        {% include '@bolt/_partials/_pager.twig' with { 'records': records } %}
+        <listing-filter></listing-filter>
+    </nav>
+    {% for record in records %}
+      <listing-row 
+        :id="'{{ record.id }}'"
+        :definition="{{ record.definition|json_encode() }}" 
+        :excerpt="{{ record.excerpt(150, true)|json_encode() }}"
+        :status="'{{ record.status }}'"
+        :thumbnail="'{{ record.image|thumbnail(150, 100) }}'"
+        :date="{
+          published: '{{ record.publishedAt|localizeddate('medium', 'none', null, 'UTC') }}',
+          created: '{{ record.datecreated|date("Y-m-d H:i") }}',
+          changed: '{{ record.datechanged|date("Y-m-d H:i") }}'
+        }"
+        author="{{record.author}}"
+      >
+      </listing-row>
+    {% endfor %}
+    <nav class="listing__filter">
+        {% include '@bolt/_partials/_pager.twig' with { 'records': records } %}
+    </nav>
 
 {% else %}
 
