--- a/templates/content/listing.twig
+++ b/templates/content/listing.twig
@@ -1,10 +1,12 @@
 {% extends '@bolt/_base/layout.twig' %}
 
+
+
 {% block title %}
     {% if contenttype %}
-        {{ 'title.contentlisting'|trans }} » <b>{{ contenttype.name }}</b>
+        <i class='fas mr-2 {{contenttype.icon_one}}'></i> <strong>{{ contenttype.name }}</strong>
     {% else %}
-        <b>{{ 'title.contentlisting'|trans }}</b>
+        <strong>{{ 'title.contentlisting'|trans }}</strong>
     {% endif %}
 {% endblock %}
 
