--- a/templates/dashboard/dashboard.twig
+++ b/templates/dashboard/dashboard.twig
@@ -1,6 +1,8 @@
 {% extends '@bolt/_base/layout.twig' %}
 
-{% block title "<b>Dashboard</b>" %}
+{% block title %}
+  <i class='fas mr-2 fa-tachometer-alt'></i><strong>Dashboard</strong>
+{% endblock title %}
 
 {% block main %}
   <div id="listing">
