Make sure floatfield and imagefield have correct output

--- a/templates/editcontent/fields/integer.twig
+++ b/templates/editcontent/fields/integer.twig
@@ -2,5 +2,5 @@
 
 {% block field %}
     <label>{{ label }}</label>
-    <input name="{{ name }}" placeholder="First Name" type="number" step="1" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="number" step="1" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
 {% endblock %}
