--- a/templates/editcontent/fields/float.twig
+++ b/templates/editcontent/fields/float.twig
@@ -2,7 +2,7 @@
 
 {% block field %}
     <label>{{ label }}</label>
-    <input name="{{ name }}" placeholder="First Name" type="number" step="1" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="number" step="1" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
 
     <mark>Note: This field is practically the same as the <code>integer</code>-field.</mark>
 
