--- a/templates/editcontent/fields/imagelist.twig
+++ b/templates/editcontent/fields/imagelist.twig
@@ -2,9 +2,9 @@
 
 {% block field %}
     <label>{{ label }}</label>
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
 
     <mark>Note: This field is practically the same as the <code>filelist</code>-field.</mark>
 
