--- a/templates/editcontent/fields/textarea.twig
+++ b/templates/editcontent/fields/textarea.twig
@@ -1,8 +1,8 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <editor-textarea 
-        :value="'{{ value }}'"
+    <editor-textarea
+        :value="'{{ value|json_encode() }}'"
         :label="'{{ label }}'"
         :name="'{{ name }}'"
     ></editor-textarea>
