Tweaking the CSS

--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -4,11 +4,10 @@
 @import './layout/layout';
 @import './modules/modules';
 
-
 @import "settings";
 @import "textstyles";
-@import "bootstrap-overrides";
 @import "forms";
 @import "listings";
 @import "selectize";
-@import "_editor";
+@import "typography";
+@import "editor";
