--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -1,4 +1,4 @@
-//** Admin | Sidebar 
+//** Admin | Sidebar
 
 .admin__sidebar {
   position: relative;
@@ -46,7 +46,7 @@
     padding: $spacer / 1.5 $spacer;
     display: block;
     color: $gray-600;
-    font-weight: $font-weight-bold;
+    font-weight: $font-weight-semibold;
     letter-spacing: $letter-spacing;
     font-size: 95%;
 
