--- a/assets/scss/modules/admin/_header.scss
+++ b/assets/scss/modules/admin/_header.scss
@@ -2,7 +2,7 @@
 
 .admin__header{
   &--title{
-    font-weight: $font-weight-light;
+    font-weight: $font-weight-normal;
     font-size: $h3-font-size;
     i{
       color: theme-color('primary')
