--- a/templates/editcontent/fields/_base.twig
+++ b/templates/editcontent/fields/_base.twig
@@ -1,15 +1,16 @@
 {%- spaceless -%}
-{% if not label|default() %}
-    {% set label = field.definition.label|default(field.name|ucwords) ~ ':' %}
-{% endif %}
 
-{% set prefix = prefix|default(field.prefix|default()) %}
-{% set postfix = postfix|default(field.postfix|default()) %}
-
+{# Set the name #}
 {% if not name|default() %}
     {%  set name = 'fields[' ~ field.name ~ ']' %}
 {% endif %}
 
+{# Set the id #}
+{% if not id|default() %}
+    {% set id = 'field-' ~ field.name|default(name) %}
+{% endif %}
+
+{# Set the value #}
 {% if not value|default() %}
     {% if field.value is defined %}
         {% set value = field.value|join|default() %}
@@ -18,26 +19,41 @@
     {% endif %}
 {% endif %}
 
+{# Set the class #}
 {% if not class|default() %}
     {% set class = field.definition.class|default() %}
 {% endif %}
 {% set class = "form-control " ~ class %}
 
-{% if not id|default() %}
-    {% set id = 'field-' ~ field.name|default(name) %}
+
+{# Set the label #}
+{% if not label|default() %}
+    {% set label = field.definition.label|default(field.name|ucwords) ~ ':' %}
 {% endif %}
+
+{# Set the prefix and postfix attributes #}
+{% set prefix = prefix|default(field.definition.prefix|default()) %}
+{% if prefix and not ('<p' in prefix or '<span' in prefix or '<div' in prefix) %}
+    {% set prefix = '<span id="' ~ id ~ '_prefix" class="form-text text-muted">' ~ prefix ~ '</span>' %}
+{% endif %}
+{% set postfix = postfix|default(field.definition.postfix|default()) %}
+{% if postfix and not ('<p' in postfix or '<span' in postfix or '<div' in postfix) %}
+    {% set postfix = '<span id="' ~ id ~ '_postfix" class="form-text text-muted">' ~ postfix ~ '</span>' %}
+{% endif %}
+
 {%- endspaceless -%}
+
 
 <!-- field "{{ label }} {{ name }}" -->
 <div class="form-group">
 {% if prefix %}
-    <small id="{{name}}_prefix" class="form-text text-muted">{{ prefix }}</small>
+    {{ prefix|raw }}
 {% endif %}
 {% block field %}
 
 
 {% endblock %}
 {% if postfix %}
-    <small id="{{name}}_postfix" class="form-text text-muted">{{ postfix }}</small>
+    {{ postfix|raw }}
 {% endif %}
 </div>
